--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
