--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple Discord bot",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "nodemon bot.js"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "mongodb": "^6.7.0",
+    "nodemon": "^3.1.3",
     "path": "^0.12.7"
   }
 }
